в Friend сделан условный render кнопки и условный onSelectFriend по флагу isSelected

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,6 @@
   --color-light: #ffe8cc;
   --color-medium: #ffa94d;
   --color-dark: #ff922b;
-  --color-second: #ff6e4d;
-  --color-second-dark: #ff4b2b;
 }
 
 * {
@@ -178,13 +176,7 @@ form h2 {
   letter-spacing: -0.5px;
 }
 
-form .btn-cancel {
-  grid-column: 1;
-  grid-row: 6;
-
-  background-color: var(--color-second);
-}
-
-form .btn-cancel:hover {
-  background-color: var(--color-second-dark);
+form h2 span {
+  font-size: 1.8rem;
+  text-decoration: underline;
 }
